Began customizing/updating home page.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="grid_12">
                     <div class="f__left logo-caption f__none-767">
                         <h1>
-                            <a href="index.html">Medical <span>training</span></a>
+                            <a href="index.html">Diablo <span>s a f e t y</span></a>
                         </h1>
                     </div>
 
@@ -84,25 +84,6 @@
                             </li>
                             <li>
                                 <a href="aboutUs.html">About</a>
-                                <ul>
-                                    <li>
-                                        <a href="#">history</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">news</a>
-                                        <ul>
-                                            <li>
-                                                <a href="#">latest</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">archive</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a href="#">testimonials</a>
-                                    </li>
-                                </ul>
                             </li>
                             <li>
                                 <a href="onlineClasses.html">Online Classes</a>
@@ -111,7 +92,7 @@
                                 <a href="freeClasses.html">Free Classes</a>
                             </li>
                             <li>
-                                <a class="last" href="contactUs.html">Contacts</a>
+                                <a class="last" href="contactUs.html">Contact Us</a>
                             </li>
                         </ul>
                     </nav>
